--- a/css/layout.css
+++ b/css/layout.css
@@ -63,7 +63,7 @@ p {
     z-index: 1;
     color: #fff;
     background-color: #16a085;
-    height: 820px;
+    height: 620px;
     overflow: hidden;
 }
 
@@ -211,8 +211,8 @@ ul.item p {
 
 #time {
     margin: 0 auto;
-    max-width: 900px;
-    width: 90%;
+    max-width: 1000px;
+    width: 100%;
     background: url("../images/h.png") repeat-x 0  78px;
     /*background: url("../images/h.png") repeat-x 0  108px;*/
 }
@@ -221,7 +221,6 @@ ul.item p {
     height: 400px;
     float: left;
 }
-
 .timeline .list li.w10 {
     width: 10%;
 }
@@ -366,14 +365,14 @@ ul.item p {
 
 .skill ul.tags li {
     float: left;
-    background-color: #eee;
-    color: #777;
+    color: #fff;
     border-radius: 4px;
-    padding: 4px 8px;
+    padding: 8px 15px;
     font-size: 12px;
-    margin-right: 4px;
+    margin-right: 10px;
     margin-bottom: 4px;
     transition: all 0.6s;
+    background: #5cbdaa;
     -webkit-transition: all 0.6s;
 }
 
